Tests/Runtime2/Error/Mixed/.build/mixedcatcher.pr
{
  "name": "MixedCatcher",
  "description": "No goal was provided. Please send the %goalForLlm% content (or describe the task you want completed) so I can generate the required JSON plan.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %mixedCaught% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%mixedCaught%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Runtime2/Error/Mixed/MixedCatcher.goal",
  "prPath": "/Tests/Runtime2/Error/Mixed/.build/mixedcatcher.pr",
  "hash": "a0848b3b32f6aca7e670247d79e5ae4b3856ac7f6beaf496c5b132e23a2daa67",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}